# phase-robust-backtesting

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: anti_patterns.md  method_templates.md
phase_robust_backtesting/: __init__.py  audit_multi_phase.py  ledger.py  multi_phase.py  multiple_testing.py
tests/: test_audit_multi_phase.py  test_backtest_multiple_testing.py  test_cli_smoke.py  test_multi_phase_aggregator.py  test_preregistration_ledger.py
